[project]
name = "telegram-bot-storage"
version = "0.1.0"
description = "Telegram bot to store notes, docs, images, videos"
authors = [
    {name = "Mohamed Al Hamdhy"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot (>=22.3,<23.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "python-magic (>=0.4.27,<0.5.0)"
]

[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
